--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
-    "webpack": "4.41.6"
+    "webpack": "4.41.6",
+    "webpack-cli": "3.3.11"
   }
 }
