--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Esto sera un proyecto de webpack",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "npx webpack --entry ./index.js --output ./bundle.js --mode development",
+    "build:local": "webpack --mode production",
+    "build:external": "webpack --config ./external/webpack.config.js"
   },
   "keywords": [
     "webpack"
